lockout and forgot password

--- a/MovieStoreMvc/appsettings.json
+++ b/MovieStoreMvc/appsettings.json
@@ -8,5 +8,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "MailSettings": {
+    "Mail": "ninehotel09@gmail.com",
+    "DisplayName": "MovieStoreMVC",
+    "Password": "amccbnqcuoxutyww",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+
   "AllowedHosts": "*"
 }
